@@ -50,4 +50,3 @@ end
   </p>
 
 </form>
-<%= javascript_tag("ActiveScaffold.focus_first_element_of_form('#{element_form_id(:action => form_action)}');") %>
